--- a/st-george-c-of-c/styles/medium.css
+++ b/st-george-c-of-c/styles/medium.css
@@ -102,27 +102,6 @@
     }
 
 
-    /* Join Page main css */
-
-    .join-main {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-    }
-
-    .join-grid-1 {
-        grid-column: 2/3;
-    }
-
-    .join-grid-2 {
-        grid-column: 1/3;
-        grid-row: 1/2;
-    }
-
-    .join-grid-3 {
-        grid-column: 1/2;
-        grid-row: 2/3;
-    }
-
     /* Main grid layout */
 
     .mid-layout {
